mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/vita_usuario__c.object-meta.xml
<CustomObject>
    <label>Usuario</label>
    <nameField>
        <displayFormat>USR-{0000}</displayFormat>
        <label>Usuario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usuarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>