mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/apellido__c.field-meta.xml
<CustomField>
    <fullName>apellido__c</fullName>
    <label>Apellido</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>