mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/Direccion_U__c.field-meta.xml
<CustomField>
    <fullName>Direccion_U__c</fullName>
    <label>Dirección</label>
    <type>Address</type>
</CustomField>