mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/dni_NO__c.field-meta.xml
<CustomField>
    <fullName>dni_NO__c</fullName>
    <externalId>true</externalId>
    <label>DNI_NO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>