mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>