mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/esta_adaptado__c.field-meta.xml
<CustomField>
    <fullName>esta_adaptado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>El usuario requiere adaptaciones especiales.</inlineHelpText>
    <label>Necesidades Especiales</label>
    <type>Checkbox</type>
</CustomField>