mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/estado_actividad__c.field-meta.xml
<CustomField>
    <fullName>estado_actividad__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el usuario está activo en el sistema Vita.</description>
    <inlineHelpText>Campo editable solo por el equipo administrativo.</inlineHelpText>
    <label>Usuario Activo</label>
    <type>Checkbox</type>
</CustomField>