mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_nacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>