mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/fecha_registro__c.field-meta.xml
<CustomField>
    <fullName>fecha_registro__c</fullName>
    <label>Fecha de Registro</label>
    <required>true</required>
    <type>Date</type>
</CustomField>