mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/foto_perfil__c.field-meta.xml
<CustomField>
    <fullName>foto_perfil__c</fullName>
    <label>Foto de Perfil</label>
    <type>Url</type>
</CustomField>