mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/genero__c.field-meta.xml
<CustomField>
    <fullName>genero__c</fullName>
    <inlineHelpText>Seleccioná el género con el que se sienta identificado. Esta información es opcional y confidencial.</inlineHelpText>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>No Binario</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Prefiero no decirlo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>