mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/nombre__c.field-meta.xml
<CustomField>
    <fullName>nombre__c</fullName>
    <label>Nombre</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>