mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/telefono__c.field-meta.xml
<CustomField>
    <fullName>telefono__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>