mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/tipo_usuario__c.field-meta.xml
<CustomField>
    <fullName>tipo_usuario__c</fullName>
    <label>Tipo de Usuario</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paciente</fullName>
                <default>true</default>
                <label>Paciente</label>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>Administrador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>