mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/fields/usuario_dni__c.field-meta.xml
<CustomField>
    <fullName>usuario_dni__c</fullName>
    <description>Ingrese DNI sin puntos.</description>
    <externalId>true</externalId>
    <label>DNI</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>