mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/validationRules/DNI_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DNI_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(usuario_dni__c),
    NOT(ISNUMBER(usuario_dni__c)),
    LEN(usuario_dni__c) &lt;&gt; 8
)</errorConditionFormula>
    <errorMessage>Ponga un dni valido con numeros y hasta 8 caracteres.</errorMessage>
</ValidationRule>