mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/validationRules/Solo_Letras_Nombre_Apellido.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_Letras_Nombre_Apellido</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  REGEX( nombre__c , &quot;.*[0-9].*&quot;),
  REGEX( apellido__c , &quot;.*[0-9].*&quot;)
)</errorConditionFormula>
    <errorDisplayField>apellido__c</errorDisplayField>
    <errorMessage>&quot;Los campos Nombre y Apellido solo pueden contener letras. Por favor, elimina cualquier número o carácter especial.&quot;</errorMessage>
</ValidationRule>