mi-primer-proyecto/force-app/main/default/objects/vita_usuario__c/listViews/List_Nombre.listView-meta.xml
<ListView>
    <fullName>List_Nombre</fullName>
    <columns>NAME</columns>
    <columns>usuario_dni__c</columns>
    <columns>apellido__c</columns>
    <columns>nombre__c</columns>
    <columns>tipo_usuario__c</columns>
    <columns>email__c</columns>
    <columns>fecha_de_nacimiento__c</columns>
    <columns>fecha_registro__c</columns>
    <columns>telefono__c</columns>
    <columns>estado_actividad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lista de Usuarios</label>
</ListView>